logs/dag_id=extract-transform-load/run_id=manual__2023-12-26T06:00:34.415373+00:00/task_id=load/attempt=1.log
[2023-12-26T06:00:36.641+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: extract-transform-load.load manual__2023-12-26T06:00:34.415373+00:00 [queued]>
[2023-12-26T06:00:36.645+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: extract-transform-load.load manual__2023-12-26T06:00:34.415373+00:00 [queued]>
[2023-12-26T06:00:36.645+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 6
[2023-12-26T06:00:36.651+0000] {taskinstance.py:2192} INFO - Executing <Task(_PythonDecoratedOperator): load> on 2023-12-26 06:00:34.415373+00:00
[2023-12-26T06:00:36.655+0000] {standard_task_runner.py:60} INFO - Started process 2120 to run task
[2023-12-26T06:00:36.658+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'extract-transform-load', 'load', 'manual__2023-12-26T06:00:34.415373+00:00', '--job-id', '218', '--raw', '--subdir', 'DAGS_FOLDER/api.py', '--cfg-path', '/tmp/tmpipi4wm8k']
[2023-12-26T06:00:36.659+0000] {standard_task_runner.py:88} INFO - Job 218: Subtask load
[2023-12-26T06:00:36.690+0000] {task_command.py:423} INFO - Running <TaskInstance: extract-transform-load.load manual__2023-12-26T06:00:34.415373+00:00 [running]> on host 023f8da17198
[2023-12-26T06:00:36.829+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='william' AIRFLOW_CTX_DAG_ID='extract-transform-load' AIRFLOW_CTX_TASK_ID='load' AIRFLOW_CTX_EXECUTION_DATE='2023-12-26T06:00:34.415373+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-12-26T06:00:34.415373+00:00'
[2023-12-26T06:00:36.840+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/decorators/base.py", line 242, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/api.py", line 48, in load
    cursor.execute(
psycopg2.errors.SyntaxError: syntax error at or near "discounted_price"
LINE 7:           discounted_price numeric NOT NULL
                  ^

[2023-12-26T06:00:36.848+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=extract-transform-load, task_id=load, execution_date=20231226T060034, start_date=20231226T060036, end_date=20231226T060036
[2023-12-26T06:00:36.854+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 218 for task load (syntax error at or near "discounted_price"
LINE 7:           discounted_price numeric NOT NULL
                  ^
; 2120)
[2023-12-26T06:00:36.874+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2023-12-26T06:00:36.886+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
